--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,9 @@
 {
-  "name": "Pertumbuhan Iman Kristen",
-  "short_name": "ImanKristen",
-  "start_url": ".",
+  "name": "Pertumbuhan Iman",
+  "short_name": "Iman",
+  "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#006400",
-  "theme_color": "#006400",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#ffffff",
+  "theme_color": "#4CAF50",
+  "icons": []
 }
