--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
-  "icons": []
+  "theme_color": "#2e7d32"
 }
