--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -1,4 +1,4 @@
-name: Auto Update Portal Content
+name: Dynamic Portal Update
 
 on:
   schedule:
@@ -10,52 +10,70 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Update Renungan Harian
+      - name: Install jq
+        run: sudo apt-get install jq
+
+      - name: Update Renungan (Harian + Arsip)
         run: |
           TODAY=$(date +"%d %B %Y")
+          ID=$(date +%s)
 
-          cat > data/renungan.json <<EOF
-          [
-            {
-              "id": 1,
-              "judul": "Renungan $TODAY",
-              "tanggal": "$TODAY",
-              "ringkasan": "Refleksi iman dan lagu pendukung hari ini.",
-              "lagu_judul": "Bapa Engkau Sungguh Baik",
-              "lagu_link": "https://www.youtube.com/results?search_query=Bapa+Engkau+Sungguh+Baik",
-              "isi": "Iman yang dewasa dibangun melalui konsistensi.\n\nDoa, pembacaan Firman, dan refleksi pribadi membentuk karakter secara bertahap.\n\nMusik rohani membantu mengarahkan fokus hati pada kebenaran yang tetap.\n\nPertumbuhan sejati terlihat dari keputusan kecil yang setia setiap hari."
-            }
-          ]
-          EOF
+          NEW_ITEM=$(jq -n \
+            --arg id "$ID" \
+            --arg t "$TODAY" \
+            --arg j "Renungan $TODAY" \
+            --arg i "Iman bertumbuh melalui konsistensi.\n\nPertumbuhan terjadi melalui disiplin rohani yang dilakukan setiap hari.\n\nKeputusan kecil yang setia membentuk masa depan yang kuat." \
+            '{id:$id, tanggal:$t, judul:$j, isi:$i}')
 
-      - name: Update Kesaksian Mingguan
+          if [ -f data/renungan.json ]; then
+            jq ". |= [$NEW_ITEM] + . | .[:30]" data/renungan.json > temp.json
+          else
+            echo "[$NEW_ITEM]" > temp.json
+          fi
+
+          mv temp.json data/renungan.json
+
+      - name: Update Kesaksian (Setiap Senin + Arsip)
         run: |
           DAY=$(date +%u)
           if [ "$DAY" -eq 1 ]; then
             TODAY=$(date +"%d %B %Y")
+            ID=$(date +%s)
 
-            cat > data/kesaksian.json <<EOF
-            [
-              {
-                "id": 1,
-                "judul": "Kesaksian Transformasi - $TODAY",
-                "ringkasan": "Perjalanan perubahan melalui proses yang nyata.",
-                "lagu_judul": "Ku Percaya JanjiMu",
-                "lagu_link": "https://www.youtube.com/results?search_query=Ku+Percaya+JanjiMu",
-                "isi": "Transformasi hidup jarang terjadi secara instan.\n\nTekanan dan kegagalan sering menjadi alat pembentukan karakter.\n\nKomunitas dan konsistensi doa memberi stabilitas dalam proses.\n\nPerubahan sejati terlihat dari pola pikir dan tindakan yang berbeda dari masa lalu."
-              }
-            ]
-            EOF
+            NEW_ITEM=$(jq -n \
+              --arg id "$ID" \
+              --arg j "Kesaksian $TODAY" \
+              --arg i "Transformasi hidup terjadi melalui proses.\n\nTekanan membentuk karakter.\n\nKomitmen jangka panjang menghasilkan perubahan nyata." \
+              '{id:$id, judul:$j, isi:$i}')
+
+            if [ -f data/kesaksian.json ]; then
+              jq ". |= [$NEW_ITEM] + . | .[:30]" data/kesaksian.json > temp.json
+            else
+              echo "[$NEW_ITEM]" > temp.json
+            fi
+
+            mv temp.json data/kesaksian.json
           fi
 
-      - name: Commit and Push
+      - name: Update Lagu Harian
+        run: |
+          VIDEOS=("dy9nwe9_xzw" "iJCV_2H9xD0" "6X7bPj7V7mA" "0LwcvjNJnWA")
+          INDEX=$(( $(date +%j) % 4 ))
+          VIDEO_ID=${VIDEOS[$INDEX]}
+
+          cat > data/lagu.json <<EOF
+          {
+            "judul": "Lagu Rohani Hari Ini",
+            "video_id": "$VIDEO_ID"
+          }
+          EOF
+
+      - name: Commit & Push
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add data/renungan.json
-          git add data/kesaksian.json
-          git commit -m "Auto update content with song link" || echo "No changes"
+          git add .
+          git commit -m "Dynamic auto update content" || echo "No changes"
           git push
